--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
       <h1>AKKSIL AK DIAM</h1><br>
       <h2>Choisissez votre catégorie dans la liste :</h2>
       <select onchange="location = this.value;">
+        <option value="index.html">- - - - -</option>
         <option value="tout.html">Tout</option>
         <option value="dibiterie.html">Dibiterie</option>
         <option value="jus-et-delices.html">Jus et délices</option>
