--- a/resto-details.html
+++ b/resto-details.html
@@ -79,7 +79,7 @@
         <div class="container">
             <div class="section-title">
                 <p> Pour passer votre commande, veuillez nous contacter:</p>
-                <p style="color: #70b9b0;"> Minimum pour la livraison: 2000 fr</p>
+                <p style="color: #70b9b0;"> Minimum : 1500 fr</p>
                 <p>
                 <a href="tel:+221 77 291 55 07" class="instagram">
                 <img src="assets/img/Phone.png"></a>Tel: 77 291 55 07</p>
