--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,11 @@
   
                 <div>
                   <i class="bi bi-phone"></i>
-                  <p>+77 XXX XX XX</p>
+                  <p>77 XXX XX XX ou 77 XXX XX XX </p>
+                </div>
+                <div>
+                  <i class="bi bi-telephone"></i>
+                  <p>33 XXX XX XXX</p>
                 </div>
   
               </div>
@@ -110,13 +114,13 @@
             <div class="col-lg-5 col-md-12">
               <form action="forms/contact.php" method="post" role="form" class="php-email-form">
                 <div class="form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                  <input type="text" name="name" class="form-control" id="name" placeholder="Votre Nom" required>
                 </div>
                 <div class="form-group mt-3">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                  <input type="email" class="form-control" name="email" id="email" placeholder="Votre Email" required>
                 </div>
                 <div class="form-group mt-3">
-                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Sujet" required>
                 </div>
                 <div class="form-group mt-3">
                   <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
@@ -126,7 +130,7 @@
                   <div class="error-message"></div>
                   <div class="sent-message">Your message has been sent. Thank you!</div>
                 </div>
-                <div class="text-center"><button type="submit">Send Message</button></div>
+                <div class="text-center"><button type="submit">Envoyer</button></div>
               </form>
             </div>
   
@@ -139,14 +143,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>BIDEEW</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-one-page-bootstrap-template-amoeba/ -->
-        Designed by <a href="">BootstrapMade</a>
+        &copy;2022 <strong><span>BIDEEW</span></strong>
       </div>
     </div>
   </footer><!-- End #footer -->
