--- a/resto-details.html
+++ b/resto-details.html
@@ -223,13 +223,13 @@
 
 
     <!-- ======= Footer ======= -->
-    <footer id="footer">
+    <!--footer id="footer">
     <div class="container">
       <div class="copyright">
         &copy; 2022 BIDEEW 
       </div>
     </div>
-    </footer><!-- End #footer -->
+    </footer!--><!-- End #footer -->
     
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
     
