--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>BIDEEW - RESTO</title>
+  <title>BIDEEW - FOOD</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -70,7 +70,7 @@
         <div class="container">
   
           <div class="section-title">
-            <h2>Contact Us</h2>
+            <h2>Contact</h2>
           </div>
   
           <div class="row">
