--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>BIDEEW - FOOD</title>
+  <title>DELIEXPRESS</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -40,7 +40,7 @@
     <div class="container d-flex align-items-center">
 
       <div class="logo me-auto">
-        <h1><a href="index.html">BIDEEW <span style="color: rgba(112, 185, 176, 0.85);">FOOD</span></a></h1>
+        <h1><a href="index.html">DELIEXPRESS </a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -77,7 +77,7 @@
   
             <div class="col-lg-4 col-md-6">
               <div class="contact-about">
-                <h3>BIDEEW FOOD</h3>
+                <h3>DELIEXPRESS</h3>
                 <p>Cras fermentum odio eu feugiat. Justo eget magna fermentum iaculis eu non diam phasellus. Scelerisque felis imperdiet proin fermentum leo. Amet volutpat consequat mauris nunc congue.</p>
                 <div class="social-links">
                   <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
@@ -143,7 +143,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy;2022 <strong><span>BIDEEW</span></strong>
+        &copy;2022 <strong><span>DELIEXPRESS</span></strong>
       </div>
     </div>
   </footer><!-- End #footer -->
