--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>DELIEXPRESS</title>
+  <title>DeliExpress</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/d.png" rel="icon">
+  <link href="assets/img/D.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -40,7 +40,7 @@
     <div class="container d-flex align-items-center">
 
       <div class="logo me-auto">
-        <h1><a href="index.html">DELIEXPRESS </a></h1>
+        <h1><a href="index.html">DeliExpress </a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -85,7 +85,7 @@
  <footer id="footer">
   <div class="container">
     <div class="copyright">
-      &copy;2022 DELIEXPRESS 
+      &copy;2022 DeliExpress 
     </div>
   </div>
 </footer><!-- End #footer -->
