--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
           <li><a class="nav-link scrollto active" href="index.html">ACCUEIL</a></li>
           <!--li><a class="nav-link scrollto" href="login.html">SE CONNECTER</a></li!-->
           <li><a class="nav-link scrollto" href="contact.html">BESOIN D'AIDE?</a></li>
+          <li><a class="nav-link scrollto" href="cart.html"><img src="assets/img/cart-icon/panier.png"> </a></li>
+
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
