--- a/resto-details.html
+++ b/resto-details.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -53,6 +53,7 @@
           <li><a class="nav-link scrollto active" href="cart.html">
             <img src="assets/img/cart-icon/panier.png" class="img-fluid" alt="">
           </a>
+          </li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -118,7 +119,7 @@
                       <a style="color:white ;">800 fr</a>
                     </div>
                     <div>
-                      <a style="color:white ;" href="#">ajouter au panier</a>
+                      <a style="color:white ;" href="#"><button class="btn" style="background-color: azure;"><img src="assets/img/cart-icon/add.png">Add to cart</button></a>
                     </div>
                   </div>
                 </div>
