--- a/plats-traditionnels.html
+++ b/plats-traditionnels.html
@@ -40,7 +40,7 @@
     <div class="container d-flex align-items-center">
 
       <div class="logo me-auto">
-        <h1><a href="index.html">DELIEXPRESS</a></h1>
+        <h1><a href="index.html">DELIEXPRESS </a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -50,6 +50,10 @@
           <li><a class="nav-link scrollto active" href="index.html">ACCUEIL</a></li>
           <!--li><a class="nav-link scrollto" href="login.html">SE CONNECTER</a></li!-->
           <li><a class="nav-link scrollto" href="contact.html">BESOIN D'AIDE?</a></li>
+          <li><a class="nav-link scrollto active" href="cart.html">
+            <img src="assets/img/cart-icon/panier.png" class="img-fluid" alt="">
+          </a>
+          </li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -68,7 +72,7 @@
             <ol>
               <li><a href="index.html">Accueil</a></li>
               <li><a href="tout.html">Liste Restos</a></li>
-              <li>Dibiterie</li>
+              <li>Plats Traditionnels</li>
             </ol>
           </div>
   
@@ -445,7 +449,6 @@
   
         </div>
       </section><!-- End Our resto Section -->
-
   </main><!-- end main -->
 
 
