--- a/sandwisherie.html
+++ b/sandwisherie.html
@@ -50,7 +50,8 @@
           <li><a class="nav-link scrollto active" href="index.html">ACCUEIL</a></li>
           <!--li><a class="nav-link scrollto" href="login.html">SE CONNECTER</a></li!-->
           <li><a class="nav-link scrollto" href="contact.html">BESOIN D'AIDE?</a></li>
-      </li>
+          <li><a class="nav-link scrollto" href="cart.html"><img src="assets/img/cart-icon/panier.png"> </a></li>
+
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -68,7 +69,8 @@
             <h2>30 Restaurants Disponible </h2>
             <ol>
               <li><a href="index.html">Accueil</a></li>
-              <li>Liste Restos</li>
+              <li><a href="tout.html">Liste Restos</a></li>
+              <li>Sandwisherie</li>
             </ol>
           </div>
   
@@ -85,7 +87,7 @@
               <div class="resto-wrap">
                 <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                 <div class="resto-info">
-                  <h3><a href="resto-details.html"  title="Resto 1">Resto 1</a></h3>
+                  <h3><a href="resto-details.html" title="Resto 1">Resto 1</a></h3>
                   <div>
                     <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                   </div>
@@ -109,7 +111,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="resto-details.html"  title="Resto 3">Resto 3</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 3">Resto 3</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -121,7 +123,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="resto-details.html"  title="Resto 4">Resto 4</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 4">Resto 4</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -133,7 +135,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="resto-details.html"  title="Resto 5">Resto 5</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 5">Resto 5</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -145,7 +147,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="resto-details.html"  title="Resto 6">Resto 6</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 6">Resto 6</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -157,7 +159,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="resto-details.html"  title="Resto 7">Resto 7</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 7">Resto 7</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -169,7 +171,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="resto-details.html"  title="Resto 8">Resto 8</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 8">Resto 8</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -181,7 +183,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="resto-details.html"  title="Resto 9">Resto 9</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 9">Resto 9</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -193,7 +195,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="resto-details.html"  title="Resto 10">Resto 10</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 10">Resto 10</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -205,7 +207,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="resto-details.html"  title="Resto 11">Resto 11</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 11">Resto 11</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -217,7 +219,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="resto-details.html"  title="Resto 12">Resto 12</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 12">Resto 12</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -229,7 +231,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="resto-details.html"  title="Resto 13">Resto 13</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 13">Resto 13</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -241,7 +243,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="resto-details.html"  title="Resto 14">Resto 14</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 14">Resto 14</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -253,7 +255,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="resto-details.html"  title="Resto 15">Resto 15</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 15">Resto 15</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -265,7 +267,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="resto-details.html"  title="Resto 16">Resto 16</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 16">Resto 16</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -277,7 +279,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="resto-details.html"  title="Resto 17">Resto 17</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 17">Resto 17</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -289,7 +291,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="resto-details.html"  title="Resto 18">Resto 18</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 18">Resto 18</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -301,7 +303,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="resto-details.html"  title="Resto 19">Resto 19</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 19">Resto 19</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -313,7 +315,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="resto-details.html"  title="Resto 20">Resto 20</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 20">Resto 20</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -325,7 +327,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="resto-details.html"  title="Resto 21">Resto 21</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 21">Resto 21</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -337,7 +339,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="resto-details.html"  title="Resto 22">Resto 22</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 22">Resto 22</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -349,7 +351,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="resto-details.html"  title="Resto 23">Resto 23</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 23">Resto 23</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -361,7 +363,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="resto-details.html"  title="Resto 24">Resto 24</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 24">Resto 24</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -373,7 +375,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="resto-details.html"  title="Resto 25">Resto 25</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 25">Resto 25</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -385,7 +387,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="resto-details.html"  title="Resto 26">Resto 26</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 26">Resto 26</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -397,7 +399,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="resto-details.html"  title="Resto 27">Resto 27</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 27">Resto 27</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -409,7 +411,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="resto-details.html"  title="Resto 28">Resto 28</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 28">Resto 28</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -421,7 +423,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="resto-details.html"  title="Resto 29">Resto 29</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 29">Resto 29</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -433,7 +435,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="resto-details.html"  title="Resto 30">Resto 30</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 30">Resto 30</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
