--- a/sucrerie.html
+++ b/sucrerie.html
@@ -50,6 +50,8 @@
           <li><a class="nav-link scrollto active" href="index.html">ACCUEIL</a></li>
           <!--li><a class="nav-link scrollto" href="login.html">SE CONNECTER</a></li!-->
           <li><a class="nav-link scrollto" href="contact.html">BESOIN D'AIDE?</a></li>
+          <li><a class="nav-link scrollto" href="cart.html"><img src="assets/img/cart-icon/panier.png"> </a></li>
+
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -68,7 +70,7 @@
             <ol>
               <li><a href="index.html">Accueil</a></li>
               <li><a href="tout.html">Liste Restos</a></li>
-              <li>Sandwisherie</li>
+              <li>Sucrerie</li>
             </ol>
           </div>
   
@@ -445,7 +447,6 @@
   
         </div>
       </section><!-- End Our resto Section -->
-
   </main><!-- end main -->
 
 
